# email-env

./: .dockerignore  .env.example  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
data/: emails.json
environment/: __init__.py  env.py  graders.py  models.py  tasks.py  utils.py
server/: app.py
static/css/: style.css
static/js/: script.js
templates/: index.html
tests/: test_env.py  test_graders.py  test_tasks.py
