[project]
name = "email-env"
version = "0.1.0"
description = "Email environment for OpenEnv"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "openai>=1.10.0",
    "requests>=2.31.0",
    "pytest>=8.0.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"